# stabiliser-tools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ConstraintMatrices  README.md  benchmarking.py  clifford_benchmarking.py  helloworld.cpp  pauli_benchmarking.py  pauli_check.py  plot.py  python_to_cpp_array.py  stab_check.py  stabiliser_benchmarking.py  template.py  timing_tests  timing_tests.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-dist.yml  cmake-single-platform.yml  for_later.txt
F2_helper/: F2_helper.py  F2_helper_test.py
benchmarking/: Benchmarking_Data.py  generators.py
benchmarking/brute_force/: clifford_check.py  stab_state.py  stab_state_check.py
benchmarking/data/: converting C1 to C2 brute force on random clifford.npy  converting C1 to C2 our method on random clifford.npy  pauli_check_benchmarking_data.npy  test_function_with_test_generator.npy  testing C1 brute force on random clifford.npy  testing C1 brute force on random perturbed clifford.npy  testing C1 brute force on random unitary.npy  testing C1 our method on random clifford.npy  testing C1 our method on random perturbed clifford.npy  testing C1 our method on random unitary.npy  testing S1 brute force on random stabiliser state.npy  testing S1 brute force on random vector.npy  testing S1 our method on random perturbed stabiliser state.npy  testing S1 our method on random vector.npy
c++ versions/: CMakeLists.txt  f2_helper.cpp  f2_helper.h  f2_helper.test.cpp  stabiliser_state.cpp  stabiliser_state.h  stabiliser_state.test.cpp
clifford/: Clifford.py  clifford_check.py  clifford_check_test.py  clifford_from_matrix.py  clifford_from_matrix_test.py  clifford_test.py
cpp/: CMakeLists.txt
cpp/benchmarking/: CMakeLists.txt  stabiliser_from_statevector_benchmark.cpp
cpp/benchmarking/stim/: CMakeLists.txt  circuit_vs_amplitudes.cc  circuit_vs_amplitudes.h  circuit_vs_amplitudes_pybind.h  stim_pybind.cpp  twiddle.h  vector_simulator.h
cpp/src/: CMakeLists.txt  platform.h  pybind.cpp
cpp/src/clifford/: clifford.cpp  clifford_from_matrix.cpp  clifford_from_matrix.h  clifford_from_matrix_pybind.h  clifford_pybind.h
cpp/src/pauli/: pauli.cpp  pauli.h  pauli_pybind.cpp  pauli_pybind.h
cpp/src/stabiliser_state/: check_matrix.cpp  check_matrix.h  check_matrix.pybind.h  check_matrix_pybind.h  stabiliser_state.cpp  stabiliser_state.h  stabiliser_state_from_statevector.cpp  stabiliser_state_from_statevector.h  stabiliser_state_from_statevector_pybind.h  stabiliser_state_pybind.cpp  stabiliser_state_pybind.h
cpp/tests/: CMakeLists.txt  check_matrix_test.cpp  clifford_from_matrix_test.cpp  clifford_test.cpp  f2_helper_test.cpp  pauli_test.cpp  stabiliser_state_from_statevector_test.cpp  stabiliser_state_test.cpp  test_util.cpp  test_util.h
old_python/: plot.py  test.py
old_python/benchmarking/: generators.py
old_python/benchmarking/data/: converting S1 to S3 brute force on random stabiliser state.npy  converting S1 to S3 our method on random stabiliser state.npy  testing C1 brute force on random clifford.npy  testing S1 brute force on random perturbed stabiliser state.npy  testing S1 our method on random stabiliser state.npy
old_python/clifford/: clifford_from_matrix.py  clifford_test.py
old_python/pauli/: pauli_check.py  pauli_check_test.py
old_python/stabiliser_state/: Stabiliser_State.py  check_matrix_test.py  stabiliser_state_test.py
pauli/: Pauli.py  pauli_benchmarking.py  pauli_benchmarking_data.py  pauli_benchmarking_plots.py  pauli_check.py  pauli_check_benchmarking.py  pauli_check_test.py  pauli_class.py  pauli_class_test  pauli_class_test.py  pauli_test.py
python/: benchmarking.py  benchmarking_config.py  plot.py  python_testing.py  test.py
python/benchmarking/: Benchmarking_Data.py  base_benchmarking_config.py  benchmarking.py  benchmarking_config.py  generators.py  plot.py
python/benchmarking/brute_force/: clifford_check_test.py  stab_check_test.py  stab_state_check.py
python/benchmarking/data/: C_U -> succinct representation Qiskit on rand_clifford_matrix.npy  C_U -> succinct representation our method on rand_clifford_matrix.npy  C_U -> succinct representation stim on rand_clifford_matrix.npy  S_P -> S_V our method on rand_check_matrix.npy  (+71 more)
python/testing/: python_testing.py  python_to_cpp_array.py
src/: CMakeLists.txt  platform.h
src/benchmarking/: CMakeLists.txt  stabiliser_from_statevector_benchmark.cpp
src/benchmarking/stim/: circuit_vs_amplitudes.cc  circuit_vs_amplitudes.h  gates.cc  gates.h  twiddle.h  vector_simulator.cc  vector_simulator.h
src/f2_helper/: CMakeLists.txt  f2_helper.cpp  f2_helper.h  f2_helper.test.cpp
src/pauli/: CMakeLists.txt  pauli.cpp  pauli.h
src/stabiliser_state/: CMakeLists.txt  check_matrix.cpp  check_matrix.h  stabiliser_state.cpp  stabiliser_state.h  stabiliser_state.inl  stabiliser_state.test.cpp  stabiliser_state_from_state_vector.cpp  stabiliser_state_from_statevector.cpp  stabiliser_state_from_statevector.h  stabiliser_state_from_statevector.test.cpp  stabiliser_state_from_vector.h
src/tests/: CMakeLists.txt  check_matrix_test.cpp  f2_helper_test.cpp  pauli_test.cpp  stabiliser_state_from_statevector_test.cpp  stabiliser_state_test.cpp  test_util.cpp  test_util.h
src/util/: f2_helper.h
stabiliser-tools/: MANIFEST.in  README.md  pyproject.toml  setup.py
stabiliser-tools/src/: CMakeLists.txt  pybind.cpp
stabiliser-tools/src/clifford/: clifford.h  clifford_from_matrix_pybind.h  clifford_pybind.h
stabiliser-tools/src/pauli/: pauli.cpp
stabiliser-tools/src/stab_tools/: __init__.py
stabiliser-tools/src/stabiliser_state/: check_matrix.cpp  check_matrix.h
stabiliser-tools/src/stabiliser_tools.egg-info/: PKG-INFO  SOURCES.txt
stabiliser-tools/src/util/: f2_helper.h
stabiliser_state/: Check_Matrix.py  Stabiliser_State.py  check_matrix_test.py  stabiliser_check.py  stabiliser_check_test.py  stabiliser_from_check_matrix.py  stabiliser_from_state_vector.py  stabiliser_from_state_vector_test.py  stabiliser_generator.py  stabiliser_state.py  stabiliser_state_test.py
(+17 files in other folders)
