[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stabiliser-tools"
version = "0.0.9"
description = "Fast algorithms for verifying and converting specifications of stabiliser states and Clifford gates."
readme = "README.md"
dependencies = []
authors = [{ name = "Wilfred Salmon" },
           { name = "Nadish de Silva", email = "nadish_de_silva@sfu.ca" },
           { name = "Ming Yin", email = "ming_yin_2@sfu.ca" }]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ndesilva/stabiliser-tools"

# [project.scripts]